# SGE

./: .gitignore  .gitmodules  CMakeLists.txt  Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  README.md  README.org  Scene.cpp  Scene.hpp  main.cpp
.doxygen/: Doxyfile
doc/doxygen-files/: namespaces.dox
doc/doxygen-files/dirs/: include.dox  others.dox  src.dox
doc/doxygen-files/pages/: main_page.dox
factory/: CMakeLists.txt  Factory.cpp  Factory.hpp  GameObjectMemoryLayer.cpp  GameObjectMemoryLayer.hpp
factory/components/: CMakeLists.txt  ComponentMemoryLayer.cpp  ComponentMemoryLayer.hpp
handles/: CMakeLists.txt  Handle.hpp  HandleEntry.hpp
include/: CMakeLists.txt
include/SGE/: CMakeLists.txt  Camera.hpp  Engine.hpp  GameObject.hpp  Macros.hpp  Path.hpp  Scene.hpp  SceneConstructionData.hpp  Scene_ConstructionData.hpp  Vec2.hpp
include/SGE/components/: CMakeLists.txt  Component.hpp  IComponent.hpp  Logic.hpp  LogicHub.hpp  Path.hpp  Polygon.hpp  Transform.hpp
include/SGE/components/graphics/: CMakeLists.txt  GraphicsComponent.hpp  PathRenderer.hpp  VertArray.hpp
include/SGE/components/graphics/ui/: CMakeLists.txt  UI.hpp
include/SGE/components/graphics/ui/blocks/: CMakeLists.txt  UIBar.hpp  UIContent.hpp  UIText.hpp
include/SGE/components/physics/: BoxCollider.hpp  CMakeLists.txt  CircleCollider.hpp  Collider.hpp  CollisionInfo.hpp  ICollider.hpp  PhysicsMaterial.hpp  PolygonCollider.hpp  RayCastHandler.hpp  Rigidbody.hpp
include/SGE/debug/: CMakeLists.txt  CircleDebugShape.hpp  DebugShape.hpp  DirectionDebugShape.hpp  LineDebugShape.hpp  PathDebugShape.hpp  PointDebugShape.hpp
include/SGE/engine/: CMakeLists.txt  Engine.hpp  IEnvironment.hpp
include/SGE/engine/construction_data/: CMakeLists.txt  EngineCore_ConstructionData.hpp  Engine_ConstructionData.hpp  PhysicsManager_ConstructionData.hpp  WindowManager_ConstructionData.hpp
include/SGE/logic/: CMakeLists.txt  DummyLogic.hpp  ILogicCallbacks.hpp  Logic.hpp
include/SGE/misc/: CMakeLists.txt
include/SGE/misc/handles/: Handle.hpp
include/SGE/utils/: CMakeLists.txt  Matrix2D.hpp
include/SGE/utils/animation/: Animation.cpp  Animation.hpp  CMakeLists.txt
include/SGE/utils/events/: CMakeLists.txt  EventHandler.hpp  Events.hpp
include/SGE/utils/handles/: CMakeLists.txt  Handle.hpp  HandleEntry.hpp
include/SGE/utils/interpolation/: CMakeLists.txt  Interpolator.cpp  Interpolator.hpp
include/SGE/utils/log/: CMakeLists.txt  Log.hpp  Loggable.hpp
include/SGE/utils/terminal/: CMakeLists.txt  Terminal.hpp
include/SGE/utils/time/: CMakeLists.txt  Time.hpp
resources/paths/: randomized_circle.spath
src/: CMakeLists.txt
src/engine-core/: CMakeLists.txt  EngineCore.cpp  EngineCore.hpp
src/engine-core/debug/: CMakeLists.txt  EngineCoreDebug.cpp  EngineCoreDebug.hpp
src/engine-core/debug/fps-counter/: CMakeLists.txt  FpsCounter.cpp  FpsCounter.hpp
src/engine-core/debug/hierarchy_panel/: CMakeLists.txt  HierarchyPanel.cpp  HierarchyPanel.hpp
src/engine-core/debug/profiler/: CMakeLists.txt  Profiler.cpp  Profiler.hpp
src/engine-core/subsystems/: CMakeLists.txt  Subsystem.cpp  Subsystem.hpp
src/engine-core/subsystems/input-manager/: CMakeLists.txt  InputManager.cpp  InputManager.hpp
src/engine-core/subsystems/logic-manager/: CMakeLists.txt  LogicManager.cpp  LogicManager.hpp
src/engine-core/subsystems/logic-subsystem/: LogicManager.cpp  LogicManager.hpp
src/engine-core/subsystems/object-manager/: CMakeLists.txt  ObjectManager.cpp  ObjectManager.hpp
src/engine-core/subsystems/physics-manager/: CMakeLists.txt  CustomB2ContactListener.cpp  CustomB2ContactListener.hpp  PhysicsManager.cpp  PhysicsManager.hpp
src/engine-core/subsystems/scene-manager/: CMakeLists.txt  ObjectManager.cpp  ObjectManager.hpp
src/engine-core/subsystems/window-manager/: CMakeLists.txt  FontManager.cpp  FontManager.hpp  WindowManager.cpp  WindowManager.hpp
src/factory/: CMakeLists.txt  Factory.cpp  Factory.hpp
src/factory/components/: CMakeLists.txt  ComponentArray.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ComponentMemoryLayer.cpp  ComponentMemoryLayer.hpp
src/factory/components/component_arrays/: CMakeLists.txt  ComponentMemoryLayer.hpp  IComponentMemoryLayer.hpp
src/factory/components/component_creators/: CMakeLists.txt  ComponentCreator.hpp  (+1 more)
src/factory/gameobjects/: GameObjectMemoryLayer.cpp  GameObjectMemoryLayer.hpp
src/include_src/: CMakeLists.txt  Camera.cpp  Component.cpp  DummyLogic.cpp  Engine.cpp  GameObject.cpp  Logic.cpp  LogicHub.cpp  Path.cpp  Polygon.cpp  Scene.cpp  Transform.cpp  Vec2.cpp  VertArray.cpp
src/include_src/components/: BoxCollider.cpp  CMakeLists.txt  CircleCollider.cpp  Collider.cpp  CollisionInfo.cpp  GraphicsComponent.cpp  ICollider.cpp  IComponent.cpp  LogicHub.cpp  PathRenderer.cpp  PolygonCollider.cpp  RayCastHandler.cpp  Rigidbody.cpp  Transform.cpp  UI.cpp  UIBar.cpp  UIContent.cpp  UIText.cpp  VertArray.cpp
src/include_src/debug/: CMakeLists.txt  CircleDebugShape.cpp  DebugShape.cpp  DirectionDebugShape.cpp  LineDebugShape.cpp  PathDebugShape.cpp  PointDebugShape.cpp
src/include_src/utils/: CMakeLists.txt  EventHandler.cpp  Events.cpp  Log.cpp  Loggable.cpp  Terminal.cpp  Time.cpp
tester/: Box.hpp  BoxSpawner.cpp  BoxSpawner.hpp  CMakeLists.txt  HierarchyTestLogic.hpp  InitialDummyLogic.cpp  InitialDummyLogic.hpp  LogBehaviour.cpp  LogBehaviour.hpp  Matrix2D.hpp  PhysicsBox.cpp  PhysicsBox.hpp  PhysicsCircle.cpp  PhysicsCircle.hpp  RecursiveSceneLogic.hpp  TestLogic.cpp  TestLogic.hpp  TestTransform.cpp  TestTransform.hpp  Wiggler.hpp  WigglerSpawner.cpp  WigglerSpawner.hpp  main.cpp
tester/old-test-logic/: BoxSpawner.cpp  CameraControls.cpp  CameraControls.hpp  PhysicsBox.cpp  PhysicsCircle.cpp  TestLogic.cpp  TestLogic.hpp  Wiggler.hpp
tester/phisics-sandbox-logic/: AnotherScript.cpp  AnotherScript.hpp  PhysicsPolygon.cpp  PhysicsPolygon.hpp  PhysicsSandboxEntry.cpp  PhysicsSandboxEntry.hpp  StaticPolygon.cpp  StaticPolygon.hpp
tools/blender-exporter-scripts/: BlenderSimplePathExporter.py  sgexport.py  sgexport.sh
(+24 files in other folders)
